--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
+*{
+    padding: 0;
+    margin:0;
+    outline: none;
+}
+
+a:focus, .button:focus, .button.alt:focus, button:focus, input[type="button"]:focus, input[type="reset"]:focus, input[type="submit"]:focus {
+    outline: none;
+}
+
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    cursor: pointer;
+}
+
+body {
+    font-family: sans-serif;
+    font-weight: normal;
+    color: #000;
+    font-size: 18px;
+    background-color: #fff;
+}
+
+.btn {
+    padding: 5px 15px;
+    display: inline-block;
+    background: #fff;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+.title {
+    font-size: 24px;
+    font-weight: 600;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: flex-start;
 }
