--- a/src/components/Users/User/User.module.css
+++ b/src/components/Users/User/User.module.css
@@ -1,5 +1,9 @@
 .user {
     margin-bottom: 40px;
+    padding: 15px;
+    border: 3px solid white;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 .user__info {
@@ -10,9 +14,11 @@
 
 .user__head {
     margin-bottom: 20px;
+    padding: 0 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .user__block {
