--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ a{
 body {
     font-family: sans-serif;
     font-weight: normal;
-    color: #000;
+    color: #fff;
     font-size: 18px;
     background-color: #fff;
 }
@@ -43,6 +43,122 @@ body {
 .title {
     font-size: 24px;
     font-weight: 600;
+}
+
+/* RADIO */
+
+.radios {
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #E8EEFB;
+    border-radius: 5px;
+}
+
+.radio {
+    display: none;
+}
+
+.label_radio {
+    width: 210px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 5px;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.label_radio:hover {
+    opacity: 0.7;
+}
+
+.radio:checked + .label_radio {
+    background: #fff;
+    color: #000;
+}
+
+/* INPUT */
+
+.input {
+    height: 30px;
+    padding-left: 15px;
+    box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.05);
+    border: 1px solid transparent;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 19px;
+    box-sizing: border-box;
+    transition: 0.3s;
+}
+
+.input_error {
+    border: 1px solid #D04F4F;
+}
+
+.input::placeholder {
+    color: #9495AA;
+}
+
+.label_input {
+    position: relative;
+    display: block;
+}
+
+.label_input::before {
+    content: "";
+    width: 15px;
+    height: 20px;
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    margin-top: -9px;
+}
+
+
+.label__error {
+    position: absolute;
+    left: 0;
+    top: 40px;
+    font-weight: normal;
+    font-size: 10px;
+    line-height: 14px;
+    color: white;
+}
+
+.addresses-prompt {
+    width: 100%;
+    max-height: 150px;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    background: #fff;
+    font-size: 14px;
+    border: 1px solid var(--color-gray);
+    z-index: 4;
+    cursor: pointer;
+}
+
+.address-prompt {
+    width: 100%;
+    min-height: 50px;
+    padding-left: 15px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    transition: 0.2s;
+}
+
+.address-prompt:hover {
+    background: var(--color-blue);
+    color: #fff;
 }
 
 .App {
