--- a/src/components/Orders/Order/Docs/Docs.module.css
+++ b/src/components/Orders/Order/Docs/Docs.module.css
@@ -6,8 +6,6 @@
 
 .docs__main {
     margin-bottom: 15px;
-    display: flex;
-    align-items: flex-start;
 }
 
 .docs__index {
@@ -23,15 +21,15 @@
 }
 
 .docs__name {
-    width: 20%;
+    width: 200px;
 }
 
 .docs__type {
-    width: 15%;
+    width: 150px;
 }
 
 .docs__link {
-    width: 10%;
+    width: 100px;
 }
 
 .docs__download {
@@ -39,7 +37,7 @@
 }
 
 .docs__delete {
-    width: 10%;
+    width: 100px;
     cursor: pointer;
 }
 
@@ -65,6 +63,12 @@
     cursor: pointer;
 }
 
+.docs__row {
+    margin-bottom: 15px;
+    display: flex;
+    align-items: flex-start;
+}
+
 .docs__input {
     max-width: 700px;
     width: 100%;
@@ -82,4 +86,8 @@
 
 .docs__button {
     margin-right: 15px;
+}
+
+.docs__subtitle {
+    margin-bottom: 15px;
 }
